# HHS

./: .gitattributes  .gitignore  10000snps_200samples.gt  199samples.phen.filt  199samples_9586snps.dists.filt  200samples.phen  200samples_10000snps.dists  200samples_10000snps.gt  9586snps_199samples.gt.filt  Cargo.toml  README.md  bla.gt  bla.gt.T  bla.phen  blub.dists  compare.py  filter_gt.py  test.dists  test.gt  test.gt.T  transpose.awk
scripts/: pw_bin_hamm_dists_from_gt.sh  vcf2hhs.py
src/: bitarr.rs  cli.rs  dist_mat.rs  lib.rs
