[package]
name = "hhs"
version = "0.1.0"
authors = ["Julian Libiseller-Egger <37619875+zeawoas@users.noreply.github.com>"]
edition = "2018"


[dependencies]
num = "0.3.0"
bitvec = "0.17.4"
itertools = "0.9.0"
rayon = "1.3.0"
clap = "~2.27.0"
float-cmp = "0.8.0"


[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]


[[bin]]
name = "hhs"
path = "src/bin/main.rs"
